# sam2-edge-cpp

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LESSONS_LEARNED.md  Makefile  README.md  build.sh  index.html  pyproject.toml  script.js  styles.css
edgesam_py/: __init__.py  cli.py  segmentation.py
include/onnxruntime/core/session/: environment.h  experimental_onnxruntime_cxx_api.h  experimental_onnxruntime_cxx_inline.h  onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h  onnxruntime_run_options_config_keys.h  onnxruntime_session_options_config_keys.h
src/: edgeSam.cpp  edgeSam.h  main.cpp
tests/: __init__.py  conftest.py  test_cli.py  test_segmentation.py
