[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "edgesam-onnxruntime"
dynamic = ["version"]
description = "Ultra-fast EdgeSAM implementation with ONNX Runtime and OpenCV"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "EdgeSAM Team", email = "edgesam@example.com"},
]
keywords = [
    "ai",
    "computer-vision",
    "edge-computing",
    "image-segmentation",
    "machine-learning",
    "onnx",
    "opencv",
    "segmentation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "onnxruntime>=1.12.1",
    "pillow>=10.0.0",
    "typing-extensions>=4.8.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "coverage[toml]>=7.4.0",
    "ipython>=8.12.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.2.0",
]
test = [
    "coverage[toml]>=7.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
gpu = [
    "onnxruntime-gpu>=1.12.1",
]
all = [
    "edgesam-onnxruntime[dev,test,docs,gpu]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/edgeSAM-onnxruntime-cpp"
Documentation = "https://github.com/umitkacar/edgeSAM-onnxruntime-cpp#readme"
Repository = "https://github.com/umitkacar/edgeSAM-onnxruntime-cpp"
Issues = "https://github.com/umitkacar/edgeSAM-onnxruntime-cpp/issues"

[project.scripts]
edgesam = "edgesam_py.cli:main"

# ===== HATCH CONFIGURATION =====
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "edgesam_py/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["edgesam_py"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/.gitignore",
    "/.pre-commit-config.yaml",
]

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=7.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:edgesam_py tests}"
style = [
    "ruff check {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff check --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]>=7.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov --cov-report=term-missing {args:tests}"

# ===== RUFF CONFIGURATION =====
[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "D",     # pydocstyle
    "E",     # pycodestyle errors
    "ERA",   # eradicate
    "F",     # pyflakes
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "TCH",   # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]

ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "E501",   # Line too long (handled by black)
    "ISC001", # Conflicts with formatter
    "PLR0913", # Too many arguments
    "S101",   # Use of assert detected
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
    "ARG",     # Unused function args
]
"__init__.py" = [
    "F401",    # Unused import
]

[tool.ruff.lint.isort]
known-first-party = ["edgesam_py"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ===== BLACK CONFIGURATION =====
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ===== MYPY CONFIGURATION =====
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "onnxruntime.*",
    "PIL.*",
]
ignore_missing_imports = true

# ===== PYTEST CONFIGURATION =====
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=edgesam_py",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ===== COVERAGE CONFIGURATION =====
[tool.coverage.run]
branch = true
parallel = true
source = ["edgesam_py"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/_version.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ===== BANDIT CONFIGURATION =====
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    ".hatch",
]
skips = ["B101", "B601"]
